<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editStudentName" />

    <EditText
        android:id="@+id/editStudentSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editStudentSurname" />

    <EditText
        android:id="@+id/editStudentUniversity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editStudentUniversity" />

    <EditText
        android:id="@+id/editStudentAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editStudentAge"
        android:inputType="number" />
</LinearLayout>
