<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/halloween_bg"
        android:alpha="0.8">
    </LinearLayout>

    <!--OUTLINE-->
    <TextView
        android:id="@+id/textViewOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/textViewOutline"
        android:textSize="33sp"
        android:textColor="@android:color/black"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="2"
        android:shadowRadius="2" />

    <!-- MAIN STRING   -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/textView"
        android:textSize="33sp"
        android:textColor="@android:color/white"/>

    <!-- EDIT TEXT -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/editText"
        android:inputType="text"/>

    <!-- SAVE DATA button   -->
    <Button
        android:id="@+id/startNewActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/startNewActivityButton" />

</RelativeLayout>